# DrugPipe

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: data_sources.yaml  default.yaml
data/: README.md
data/example/: bone_cell_markers.tsv  coloc_results.tsv  credible_sets.tsv  druggability.tsv  example_gwas.tsv  gene_annotation.tsv  l2g_scores.tsv  mediation_mr_results.tsv  mr_results.tsv  opentargets_evidence.tsv  pathway_gene_sets.tsv  phe_mr_results.tsv
docs/: data_sources.md  external_tools.md  interpretation.md  overview.md  plotting_recipes.md  schemas.md  workflow.md
docs/codex/: scientific-svg-layout.md
examples/: README.md
examples/minimal/: README.md
examples/osteoporosis/: README.md
examples/osteoporosis_demo/: README.md
examples/plotting/: README.md
examples/plotting_demo/: README.md
scripts/figures/: build_drugpipe_analysis_map.py
src/osteo_target_gwas/: cli.py  (+3 more)
tests/: test_analysis_map_layout.py  test_bone_context.py  test_cli.py  test_coloc.py  test_config.py  test_druggability.py  test_example_data.py  test_finemap.py  test_genes.py  test_gwas_io.py  test_imports.py  test_loci.py  test_mediation_mr.py  test_pathway.py  test_phe_mr.py  test_qc.py  test_report.py  test_run_pipeline.py  test_scientific_workflow_figure_skill.py  test_target_cards.py  test_target_mr.py  test_target_score.py
workflows/: 01_gwas_qc_and_loci.sh  02_gene_mapping_and_finemap_import.sh  03_qtl_and_omics_evidence.sh  04_mr_safety_druggability.sh  05_target_scoring_and_reports.sh  06_standard_figures.sh  README.md
(+59 files in other folders)
