[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osteo-target-gwas"
version = "0.1.0"
description = "Reproducible osteoporosis post-GWAS target-discovery pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
osteo-target-gwas = "osteo_target_gwas.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
